turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: '(' expected but identifier found.
	if getCouleurSol() == Color.white
           ^LangtonsAnt:6: error: ';' expected but 'else' found.
	else
        ^LangtonsAnt:12: error: ':' expected but ')' found.
def setColor(Color) {
                  ^LangtonsAnt:27: error: identifier expected but '}' found.
}
^